# RL-InventorySystem

./: .gitignore  README.md  main.py  pyproject.toml
docs/: assigment.md  mdp.md  tips.md
environment/: __init__.py  factory.py  gym_env.py
mdp/reward/: __init__.py  base.py  factory.py  shaped.py  standard.py
notebooks/: baseline.ipynb  dqn_agent.ipynb  dqn_agent_best.ipynb  dqn_experiments.ipynb  ppo_agent.ipynb  welch_procedure.ipynb
notebooks/01_understanding/: 01_mdp_exploration.ipynb
notebooks/02_simulation/: 01_simulation_basics.ipynb
notebooks/03_baseline/: 01_sS_policy_theory.ipynb  02_sS_implementation.ipynb
notebooks/basic/: 01_mdp_exploration.ipynb  02_simulation_basics.ipynb  03_sS_policy_empirical.ipynb  03_sS_policy_theory.ipynb
notebooks/train/: dqn_agent.ipynb  ppo_experiments.ipynb
simulation/: __init__.py  engine.py  events.py  generators.py
src/: seeds.py
src/agents/: __init__.py  agents_loader.py  base.py  dqn_agent.py  ppo_agent.py
src/agents/callbacks/: learning_curve_callback.py
src/agents/metrics/: __init__.py  evaluation_metrics.py  training_metrics.py
src/baseline/: __init__.py  sS_policy.py
src/environment/: __init__.py  factory.py  gym_env.py
src/mdp/: __init__.py  action.py  reward.py  state.py
src/mdp/reward/: __init__.py  base.py  factory.py  shaped.py  standard.py
src/simulation/: __init__.py  customer.py  engine.py  events.py  generators.py  product.py  supplier.py  warehouse.py
